--- a/first_stage.ipynb
+++ b/first_stage.ipynb
@@ -240,19 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "5e3f6811",
    "metadata": {},
    "outputs": [],
    "source": [
     "# redundant_cols = [2, 6, 15, 16, 26];\n",
-    "features = [3, 4, 5, 7, 8, 9, 20]\n",
+    "# features = [3, 4, 5, 7, 8, 9, 20]\n",
+    "features = [3, 4, 5, 9, 20]\n",
     "# cols = [i for i in 2:26 if (i in redundant_cols)];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "2bad7422",
    "metadata": {},
    "outputs": [],
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "eb6a792f",
    "metadata": {},
    "outputs": [],
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "c32b86d2",
    "metadata": {
     "scrolled": false
@@ -285,7 +286,7 @@
      "data": {
       "text/plain": [
        "DecisionTreeClassifier\n",
-       "max_depth:                8\n",
+       "max_depth:                10\n",
        "min_samples_leaf:         1\n",
        "min_samples_split:        2\n",
        "min_purity_increase:      0.0\n",
@@ -295,18 +296,18 @@
        "root:                     nothing"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = DecisionTreeClassifier(max_depth=8)"
+    "model = DecisionTreeClassifier(max_depth=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "ff166715",
    "metadata": {},
    "outputs": [],
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "61943636",
    "metadata": {
     "scrolled": true
@@ -327,7 +328,7 @@
      "data": {
       "text/plain": [
        "DecisionTreeClassifier\n",
-       "max_depth:                8\n",
+       "max_depth:                10\n",
        "min_samples_leaf:         1\n",
        "min_samples_split:        2\n",
        "min_purity_increase:      0.0\n",
@@ -335,11 +336,11 @@
        "n_subfeatures:            0\n",
        "classes:                  Union{Missing, String}[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "root:                     Decision Tree\n",
-       "Leaves: 87\n",
-       "Depth:  8"
+       "Leaves: 144\n",
+       "Depth:  10"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,17 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "18b2ead6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9426644182124789"
+       "0.9325463743676222"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "87f3c342",
    "metadata": {},
    "outputs": [
@@ -391,11 +392,11 @@
        "classes:             Union{Missing, String}[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "ensemble:            Ensemble of Decision Trees\n",
        "Trees:      100\n",
-       "Avg Leaves: 88.06\n",
+       "Avg Leaves: 90.13\n",
        "Avg Depth:  8.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,17 +408,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "532a7ebf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9409780775716695"
+       "0.9350758853288365"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "9dee153f",
    "metadata": {},
    "outputs": [],
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "9e8af335",
    "metadata": {},
    "outputs": [],
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "id": "ee0cbb00",
    "metadata": {},
    "outputs": [],
