--- a/scraping_articles.ipynb
+++ b/scraping_articles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "c97c9a36",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "2ea5d728",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "c22e4a9f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "2c8b82c9",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "2a239285",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "Any[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "0719fc82",
    "metadata": {
     "scrolled": true
@@ -80,13 +80,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5e8ea538",
+   "execution_count": 21,
+   "id": "6b4c39b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3000-element Vector{Nothing}:\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " ⋮\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing\n",
+       " nothing"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for i in 1:100\n",
-    "    r = HTTP.get(\"https://www.investing.com/news/forex-news/$i\")\n",
+    "asyncmap(1:3000;ntasks=50) do n\n",
+    "    r = HTTP.get(\"https://www.investing.com/news/forex-news/$n\", readtimeout=10)\n",
     "    r_parsed = parsehtml(String(r.body))\n",
     "    body = r_parsed.root[2]\n",
     "    for article in body[7][4][6].children\n",
@@ -100,43 +137,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "id": "5e8ea538",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in 1:100\n",
+    "#     r = HTTP.get(\"https://www.investing.com/news/forex-news/$i\")\n",
+    "#     r_parsed = parsehtml(String(r.body))\n",
+    "#     body = r_parsed.root[2]\n",
+    "#     for article in body[7][4][6].children\n",
+    "#         text = article[2][1][1].text\n",
+    "#         if !occursin(\".initSlot\", text)\n",
+    "#             append!(articles, [text])\n",
+    "#         end\n",
+    "#     end\n",
+    "# end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "a0851c33",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1753-element Vector{Any}:\n",
-       " \"Dollar dips but shows biggest weekly gain in almost 3 months\"\n",
-       " \"EURJPY Price Penetrates \\$131 Level Downside, Targeting \\$130 Level\"\n",
-       " \"Column: Far from debasement, dollar hits overdrive\"\n",
-       " \"Dollar Edges Lower; Remains Near 16-Month High\"\n",
-       " \"NZ dollar drops below 70 level\"\n",
-       " \"Dollar Near 16-Month High on Rates Hike Bets\"\n",
-       " \"Dollar climbs after hot U.S. inflation; euro dips\"\n",
-       " \"U.S. Dollar Continues to Gain Following Wednesday's Inflation Data \"\n",
-       " \"De-Banking Crypto Traders Is More Sinister And Anti-Competitive -Aussie Senator Bragg\"\n",
-       " \"Euro US Dollar (EUR/USD) Exchange Rate Hits Low as USD Soars\"\n",
-       " \"Dollar Climbs to 2021 Highs; U.S. CPI Points to Early Fed Hikes\"\n",
-       " \"Aussie dips below 73 on soft jobs report\"\n",
-       " \"Dollar Up, Boosted by Highest U.S. Inflation in a Generation\"\n",
+       "51053-element Vector{Any}:\n",
+       " \"Dollar rises as COVID concerns spark flight to safety\"\n",
+       " \"Exclusive - China FX regulatory body proposes cap on banks' prop trading\"\n",
+       " \"Higher core yields, sticky inflation see JPMorgan turn cautious on emerging EMEA FX\"\n",
+       " \"U.K. Budget Deficit Exceeds Forecasts as Debt Costs Triple\"\n",
+       " \"Dollar Edges Higher; Turkish Lira Continues Descent\"\n",
+       " \"Dollar Up, Gains From Euro’s Fall as Focus Remains on Interest Rate Hike Timelines\"\n",
+       " \"EURJPY Price: Will There Be a Continuation of Bearish Trend?\"\n",
+       " \"Dollar takes a breather, edges back from 16-month peak\"\n",
+       " \"Retail Sales Puts the Pound and the Loonie in the Spotlight\"\n",
+       " \"EUR/GBP – Could we finally see a breakout?\"\n",
+       " \"Turkish Lira Falls to Record After Central Bank Cuts Rates Again\"\n",
+       " \"Dollar Retreats From 16-Month High; Lira Slumps Ahead of Meeting\"\n",
+       " \"Pound Japanese Yen (GBP/JPY) Exchange Rate to Reverse Losses on Disappointing JP Inflation?\"\n",
        " ⋮\n",
-       " \"Threat to Dollar’s Global Supremacy Revived by EU Stimulus Deal\"\n",
-       " \"Euro Rises to Nearly 19-Month High on Historical EU Fiscal Package\"\n",
-       " \"Euro Is Turning Into ‘Credible’ Safe Haven After EU Rescue Deal\"\n",
-       " \"Forex - Dollar Drops; Euro, Sterling Gain on Summit Agreement\"\n",
-       " \"Negative Rates Lose Out to Zero Cost of Money in Opening Wallets\"\n",
-       " \"EU progress and vaccine hopes keep pressure on dollar\"\n",
-       " \"Dollar Retreats Over Renewed Hopes for COVID-19 Vaccine\"\n",
-       " \"Forex - Euro Climbs on EU Recovery Fund Optimism\"\n",
-       " \"Euro jumps to four-month peak on hints of progress in debt talks\"\n",
-       " \"Dollar Up, With Investors Anticipating Fresh U.S. Stimulus Measures\"\n",
-       " \"Iran's rial hits new low on unofficial market; virus, sanctions weigh\"\n",
-       " \"Dollar Set for Fourth-Weekly Slump as Surging Virus Cases Cast Doubt on Recovery\""
+       " \"Forex - Dollar down vs. most rivals ahead of key U.S. data\"\n",
+       " \"Forex - GBP/USD hits fresh daily high after upbeat U.K. PMI data\"\n",
+       " \"Forex - EUR/USD extends early gains, surges to 7-month high\"\n",
+       " \"FACTBOX-How to invest in gold and key price drivers=2\"\n",
+       " \"FOREX-Euro jumps vs dollar, yen trims post-BOJ loss\"\n",
+       " \"WRAPUP 3-Currency tensions flare as Brazil, Japan take action\"\n",
+       " \"UPDATE 2-Russia central bank cancels IIB's banking licence\"\n",
+       " \"WRAPUP 1-EU urges faster yuan rise; China demurs\"\n",
+       " \"FOREX-Euro jumps vs weak dollar; yen trims falls\"\n",
+       " \"GLOBAL MARKETS-Yen falls on BOJ surprise; stocks and gold rise\"\n",
+       " \"ANALYSIS-Spending cuts may harm UK's global influence\"\n",
+       " \"UPDATE 1-France wants China involved in currency discussions\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,13 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "6dfc46f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "using BSON\n",
-    "BSON.@save \"articles.bson\" articles"
+    "BSON.@save \"articles_long.bson\" articles"
    ]
   }
  ],
