--- a/first_stage.ipynb
+++ b/first_stage.ipynb
@@ -240,20 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "5e3f6811",
    "metadata": {},
    "outputs": [],
    "source": [
     "# redundant_cols = [2, 6, 15, 16, 26];\n",
-    "# features = [3, 4, 5, 7, 8, 9, 20]\n",
-    "features = [3, 4, 5, 9, 20]\n",
+    "features = [3, 4, 5, 7, 8, 9, 20]\n",
+    "# features = [3, 4, 5, 9, 20]\n",
     "# cols = [i for i in 2:26 if (i in redundant_cols)];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "2bad7422",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "eb6a792f",
    "metadata": {},
    "outputs": [],
@@ -276,8 +276,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "c32b86d2",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier\n",
+       "max_depth:                -1\n",
+       "min_samples_leaf:         1\n",
+       "min_samples_split:        2\n",
+       "min_purity_increase:      0.0\n",
+       "pruning_purity_threshold: 1.0\n",
+       "n_subfeatures:            0\n",
+       "classes:                  nothing\n",
+       "root:                     nothing"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = DecisionTreeClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ff166715",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "replace!(X_train, missing => \"None\")\n",
+    "replace!(X_test, missing => \"None\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "61943636",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier\n",
+       "max_depth:                -1\n",
+       "min_samples_leaf:         1\n",
+       "min_samples_split:        2\n",
+       "min_purity_increase:      0.0\n",
+       "pruning_purity_threshold: 1.0\n",
+       "n_subfeatures:            0\n",
+       "classes:                  Union{Missing, String}[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
+       "root:                     Decision Tree\n",
+       "Leaves: 173\n",
+       "Depth:  17"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fit!(model, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "18b2ead6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9207419898819561"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using Statistics\n",
+    "accuracy(x, y, model) = mean(predict(model, x) .== y)\n",
+    "accuracy(X_test, y_test, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "667f06d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Int64}:\n",
+       "  3\n",
+       "  4\n",
+       "  5\n",
+       "  9\n",
+       " 20"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = [3, 4, 5, 9, 20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5da600e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train_data[:, features]\n",
+    "X_test = test_data[:, features];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "44a36b26",
    "metadata": {
     "scrolled": false
    },
@@ -296,7 +431,7 @@
        "root:                     nothing"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,8 +442,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "ff166715",
+   "execution_count": 17,
+   "id": "60d3c5ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,8 +453,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "61943636",
+   "execution_count": 18,
+   "id": "fd93cc5f",
    "metadata": {
     "scrolled": true
    },
@@ -340,7 +475,7 @@
        "Depth:  10"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,17 +486,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "18b2ead6",
+   "execution_count": 19,
+   "id": "785886c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9325463743676222"
+       "0.9350758853288365"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "id": "87f3c342",
    "metadata": {},
    "outputs": [
@@ -392,11 +527,11 @@
        "classes:             Union{Missing, String}[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "ensemble:            Ensemble of Decision Trees\n",
        "Trees:      100\n",
-       "Avg Leaves: 90.13\n",
+       "Avg Leaves: 86.91\n",
        "Avg Depth:  8.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,17 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "532a7ebf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9350758853288365"
+       "0.9300168634064081"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "id": "9dee153f",
    "metadata": {},
    "outputs": [],
@@ -439,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "id": "9e8af335",
    "metadata": {},
    "outputs": [],
@@ -449,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "id": "ee0cbb00",
    "metadata": {},
    "outputs": [],
