--- a/first_stage.ipynb
+++ b/first_stage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "2d4614c5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "168f0f96",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "\"data/\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "5de530aa",
    "metadata": {},
    "outputs": [
@@ -132,13 +132,7 @@
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 1990. Ignoring any extra columns on this row\n",
       "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n",
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 364. Ignoring any extra columns on this row\n",
-      "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n",
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 372. Ignoring any extra columns on this row\n",
       "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n",
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 756. Ignoring any extra columns on this row\n",
@@ -146,7 +140,13 @@
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 763. Ignoring any extra columns on this row\n",
       "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n",
       "┌ Warning: thread = 1 warning: only found 14 / 26 columns around data row: 764. Filling remaining columns with `missing`\n",
-      "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:612\n",
+      "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:612\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "┌ Warning: thread = 1 warning: only found 25 / 26 columns around data row: 765. Filling remaining columns with `missing`\n",
       "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:612\n",
       "┌ Warning: thread = 1 warning: only found 14 / 26 columns around data row: 766. Filling remaining columns with `missing`\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "c9b0fb38",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "\"PROPN\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "5e3f6811",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "2bad7422",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "eb6a792f",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "c32b86d2",
    "metadata": {
     "scrolled": false
@@ -296,7 +296,7 @@
        "root:                     nothing"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "ff166715",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "61943636",
    "metadata": {
     "scrolled": true
@@ -336,11 +336,11 @@
        "n_subfeatures:            0\n",
        "classes:                  Union{Missing, String}[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "root:                     Decision Tree\n",
-       "Leaves: 173\n",
+       "Leaves: 172\n",
        "Depth:  17"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,17 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "18b2ead6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9207419898819561"
+       "0.9215851602023609"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "667f06d3",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        " 20"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "5da600e0",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "44a36b26",
    "metadata": {
     "scrolled": false
@@ -431,7 +431,7 @@
        "root:                     nothing"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "60d3c5ee",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "fd93cc5f",
    "metadata": {
     "scrolled": true
@@ -471,11 +471,11 @@
        "n_subfeatures:            0\n",
        "classes:                  Union{Missing, String}[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "root:                     Decision Tree\n",
-       "Leaves: 144\n",
+       "Leaves: 143\n",
        "Depth:  10"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,17 +486,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "785886c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9350758853288365"
+       "0.9367622259696459"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "87f3c342",
    "metadata": {},
    "outputs": [
@@ -520,40 +520,40 @@
        "n_trees:             100\n",
        "n_subfeatures:       -1\n",
        "partial_sampling:    0.7\n",
-       "max_depth:           8\n",
+       "max_depth:           10\n",
        "min_samples_leaf:    1\n",
        "min_samples_split:   2\n",
        "min_purity_increase: 0.0\n",
        "classes:             Union{Missing, String}[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "ensemble:            Ensemble of Decision Trees\n",
        "Trees:      100\n",
-       "Avg Leaves: 86.91\n",
-       "Avg Depth:  8.0"
+       "Avg Leaves: 122.84\n",
+       "Avg Depth:  10.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf = RandomForestClassifier(max_depth=8, n_trees=100)\n",
+    "rf = RandomForestClassifier(max_depth=10, n_trees=100)\n",
     "fit!(rf, X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "532a7ebf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9300168634064081"
+       "0.9342327150084317"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
+   "id": "1458c306",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature 3, Threshold prep\n",
+      "L-> Feature 1, Threshold INTJ\n",
+      "    L-> Feature 2, Threshold DT\n",
+      "        L-> Feature 3, Threshold cc\n",
+      "            L-> M : 1/1\n",
+      "            R-> J : 58/58\n",
+      "        R-> Feature 3, Threshold advmod\n",
+      "            L-> \n",
+      "            R-> \n",
+      "    R-> Feature 1, Threshold SCONJ\n",
+      "        L-> Feature 2, Threshold RB\n",
+      "            L-> \n",
+      "            R-> \n",
+      "        R-> Feature 2, Threshold VB\n",
+      "            L-> \n",
+      "            R-> \n",
+      "R-> Feature 3, Threshold punct\n",
+      "    L-> Feature 4, Threshold dobj\n",
+      "        L-> Feature 3, Threshold prt\n",
+      "            L-> \n",
+      "            R-> M : 5/5\n",
+      "        R-> Feature 4, Threshold prep\n",
+      "            L-> \n",
+      "            R-> \n",
+      "    R-> Feature 3, Threshold quantmod\n",
+      "        L-> Feature 2, Threshold HYPH\n",
+      "            L-> \n",
+      "            R-> \n",
+      "        R-> Feature 3, Threshold relcl\n",
+      "            L-> \n",
+      "            R-> P : 45/45\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_tree(model, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "9dee153f",
    "metadata": {},
    "outputs": [],
@@ -574,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "9e8af335",
    "metadata": {},
    "outputs": [],
@@ -584,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "ee0cbb00",
    "metadata": {},
    "outputs": [],
