--- a/first_stage.ipynb
+++ b/first_stage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "2d4614c5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "168f0f96",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "\"data/\""
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "5de530aa",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,13 @@
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 1990. Ignoring any extra columns on this row\n",
       "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n",
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 364. Ignoring any extra columns on this row\n",
-      "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n",
+      "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 372. Ignoring any extra columns on this row\n",
       "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n",
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 756. Ignoring any extra columns on this row\n",
@@ -140,13 +146,7 @@
       "┌ Warning: thread = 1 warning: parsed expected 26 columns, but didn't reach end of line around data row: 763. Ignoring any extra columns on this row\n",
       "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:613\n",
       "┌ Warning: thread = 1 warning: only found 14 / 26 columns around data row: 764. Filling remaining columns with `missing`\n",
-      "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:612\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:612\n",
       "┌ Warning: thread = 1 warning: only found 25 / 26 columns around data row: 765. Filling remaining columns with `missing`\n",
       "└ @ CSV /home/fmordarski/.julia/packages/CSV/Zl2ww/src/file.jl:612\n",
       "┌ Warning: thread = 1 warning: only found 14 / 26 columns around data row: 766. Filling remaining columns with `missing`\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "c9b0fb38",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "\"PROPN\""
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "id": "5e3f6811",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "2bad7422",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
+   "id": "803caffb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MersenneTwister(1)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using Random\n",
+    "Random.seed!(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "eb6a792f",
    "metadata": {},
    "outputs": [],
@@ -276,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "id": "c32b86d2",
    "metadata": {
     "scrolled": false
@@ -296,7 +318,7 @@
        "root:                     nothing"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "id": "ff166715",
    "metadata": {},
    "outputs": [],
@@ -318,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "id": "61943636",
    "metadata": {
     "scrolled": true
@@ -336,11 +358,11 @@
        "n_subfeatures:            0\n",
        "classes:                  Union{Missing, String}[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "root:                     Decision Tree\n",
-       "Leaves: 172\n",
+       "Leaves: 173\n",
        "Depth:  17"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,17 +373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "id": "18b2ead6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9215851602023609"
+       "0.9300168634064081"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +396,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
+   "id": "19f7d974",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9938417811463761"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(X_train, y_train, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "667f06d3",
    "metadata": {},
    "outputs": [
@@ -389,7 +432,7 @@
        " 20"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "id": "5da600e0",
    "metadata": {},
    "outputs": [],
@@ -411,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "id": "44a36b26",
    "metadata": {
     "scrolled": false
@@ -431,7 +474,7 @@
        "root:                     nothing"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "id": "60d3c5ee",
    "metadata": {},
    "outputs": [],
@@ -453,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "id": "fd93cc5f",
    "metadata": {
     "scrolled": true
@@ -475,7 +518,7 @@
        "Depth:  10"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,17 +529,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "id": "785886c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9367622259696459"
+       "0.9342327150084317"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +552,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
+   "id": "9af3c5ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9796305068687826"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(X_train, y_train, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "id": "87f3c342",
    "metadata": {},
    "outputs": [
@@ -527,11 +591,11 @@
        "classes:             Union{Missing, String}[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "ensemble:            Ensemble of Decision Trees\n",
        "Trees:      100\n",
-       "Avg Leaves: 122.84\n",
+       "Avg Leaves: 123.05\n",
        "Avg Depth:  10.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,17 +607,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "id": "532a7ebf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9342327150084317"
+       "0.9333895446880269"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +628,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
+   "id": "9d8e8e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9796305068687826"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(X_train, y_train, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "id": "1458c306",
    "metadata": {},
    "outputs": [
@@ -600,7 +685,7 @@
       "        L-> Feature 2, Threshold HYPH\n",
       "            L-> \n",
       "            R-> \n",
-      "        R-> Feature 3, Threshold relcl\n",
+      "        R-> Feature 2, Threshold VB\n",
       "            L-> \n",
       "            R-> P : 45/45\n"
      ]
@@ -612,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 100,
    "id": "9dee153f",
    "metadata": {},
    "outputs": [],
@@ -622,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 101,
    "id": "9e8af335",
    "metadata": {},
    "outputs": [],
@@ -632,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "id": "ee0cbb00",
    "metadata": {},
    "outputs": [],
